tests/behavior/success/optional_get_mut_value_ref.bz
function foo()
{}

function main()
{
	let i = 3;
	mut oi: ?i32 = 3;
	mut pi: ?*i32 = &i;
	mut f: ?function() -> void = foo;

	let &mut r = __builtin_optional_get_mut_value_ref(oi);
	if (&r as *void != &oi as *void) unreachable;

	let &mut r = __builtin_optional_get_mut_value_ref(pi);
	if (&r as *void != &pi as *void) unreachable;

	let &mut r = __builtin_optional_get_mut_value_ref(f);
	if (&r as *void != &f as *void) unreachable;
}
