tests/behavior/error/optional_get_mut_value_ref3.bz
function main()
{
	mut f: ?function() -> void = null;

	__builtin_optional_get_mut_value_ref(f);
}
